--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 
+
     <!DOCTYPE html>
     <html lang="en">
     
@@ -10,7 +10,7 @@
     </head>
     
     <body>
-      <h1>Jane</h1>
+      <h1>undefined</h1>
       <h2><a href="https://github.com/undefined">Github</a></h2>
     </body>
     </html>
